WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142642
Assertion failure in bmalloc::LargeObject::validateSelf on Mavericks Debug layout test bot
https://bugs.webkit.org/show_bug.cgi?id=142642
Summary
Assertion failure in bmalloc::LargeObject::validateSelf on Mavericks Debug la...
Geoffrey Garen
Reported
2015-03-12 13:53:21 PDT
Assertion failure in bmalloc::LargeObject::validateSelf on Mavericks Debug layout test bot
Attachments
Patch
(1.91 KB, patch)
2015-03-12 13:58 PDT
,
Geoffrey Garen
msaboff
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2015-03-12 13:58:46 PDT
Created
attachment 248542
[details]
Patch
Geoffrey Garen
Comment 2
2015-03-12 15:50:39 PDT
Committed
r181457
: <
http://trac.webkit.org/changeset/181457
>
David Kilzer (:ddkilzer)
Comment 3
2015-03-12 20:24:06 PDT
<
rdar://problem/20054088
>
Geoffrey Garen
Comment 4
2015-03-13 12:46:31 PDT
***
Bug 142639
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug